# edit-data

./: pyproject.toml  pyrightconfig.json
src/edit_data/: __init__.py  common.py  edits.py  fake_it.py  types.py  zip_edits.py
tests/: common.py  test_file_node.py  test_known_changes.py  test_linear_history.py  test_zip_edits.py
tests/test_data/test_project_1/: file1.txt
tests/test_data/test_project_1/folder1/: file2.txt
