[project]
name = "edit-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyle Thompson", email = "r7thompson@ucsd.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
]

[project.scripts]
edit-data = "edit_data:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
